# MOSAIC

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Info.plist  README.md  dataumd.parqeut  dataumd_anchor.parqeut  dataumd_centered.parqeut  dataumd_driver.parqeut  dataumd_rotated.parqeut  entitlements.plist  license.txt  process.txt
PythonLegacy/: README.md  pyproject.toml  requirements.txt  setup.py
PythonLegacy/mosaic/: __main__.py  cli.py  config.py  io.py  schemas.py  shell.py
PythonLegacy/mosaic/PRAAT_Analysis/accoustic_motor_sync/VOT_motor_onset_offset/: VOT_motor_onset.py
PythonLegacy/mosaic/PRAAT_Analysis/accoustic_motor_sync/coarticulation_dynamics/: coarticulation_dynamics.py
PythonLegacy/mosaic/PRAAT_Analysis/accoustic_motor_sync/motor_F1_sync/: motor_F1_synchrony.py
PythonLegacy/mosaic/PRAAT_Analysis/accoustic_motor_sync/motor_intensity_sync/: motor_intensity_synchrony.py
PythonLegacy/mosaic/PRAAT_Analysis/accoustic_motor_sync/motor_pitch_coupling/: motor_pitch_coupling.py
PythonLegacy/mosaic/Session/: session_manager.py
PythonLegacy/mosaic/SystemManager/: system_verification.py
PythonLegacy/mosaic/SystemManager/participants/: participant_creation.py  participant_list.py  participant_meta.py  participant_view.py
PythonLegacy/mosaic/SystemManager/project/: project_creation.py
PythonLegacy/mosaic/SystemManager/trial/: trial_creation.py  trial_run.py
PythonLegacy/mosaic/complex_measurements/curve_motor_geometry/commissure_ang_dev/: commissure_angle_deviation.py
PythonLegacy/mosaic/core_measurements/anchor/: anchor_point.py  anchors.py
PythonLegacy/mosaic/core_measurements/angles/: angle_calculator.py  angle_uncertainty.py  angles.py
PythonLegacy/mosaic/core_measurements/area/: curve_area.py
PythonLegacy/mosaic/core_measurements/centering/: centering.py
PythonLegacy/mosaic/core_measurements/curves/: curve_fitting.py  curves.py
PythonLegacy/mosaic/core_measurements/euclidean_distance/: euclidean.py  euclidean_distance.py  euclidean_distance_uncertainty.py
PythonLegacy/mosaic/core_measurements/landmarks/: landmark_uncertainty.py  landmarks.py
PythonLegacy/mosaic/core_measurements/pose_correction/: pose.py  pose_correction.py
src/: UMD.rs  analysis.rs  (+4 more)
(+106 files in other folders)
