[package]
name = "MOSAIC"
version = "0.3.3-alpha"
edition = "2024"
authors = ["Harry Woodhouse <jgf526@york.ac.uk>"]
description = "Motor Oral Speech Analysis and Integrated Computation (MOSAIC)"

[dependencies]
clap = { version = "4.4", features = ["derive"] } 
rustyline = "17.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
polars = { version = "0.41", features = ["lazy", "parquet"] }
polars-io = { version = "0.41", features = ["parquet"] }
thiserror = "1.0"
nalgebra = "0.34.1"
pyo3 = { version = "0.28.1", features = ["auto-initialize", "macros"] }