[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MOSAIC"
version = "0.2.0"
description = "Motor-Oral Speech Analysis & Integrated Computation (MOSAIC)"
requires-python = ">=3.10"
license = { text = "CC-BY-4.0" }

authors = [
    { name = "Harry Woodhouse", email = "jgf526@york.ac.uk" },
    { name = "Harry Woodhouse" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Harry-S-W/OAS"

[project.scripts]
mosaic = "mosaic.cli:main"
